# slop-art-online

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  STACK_REFERENCE.md
.claude/commands/: update-diagrams.md  update-docs.md
client/: Cargo.toml
client/assets/: player.glb  player.glb.working.bak  test.glb
client/src/: chat.rs  constants.rs  damage_numbers.rs  health_bar.rs  hud.rs  interpolation.rs  inventory.rs  main.rs  nameplate.rs  network.rs  npc.rs  player.rs  projectile.rs  skills.rs  status_effects.rs  world.rs
client/src/module_bindings/: attack_player_reducer.rs  mod.rs  npc_tick_schedule_type.rs  npc_type.rs  player_table.rs  player_type.rs  position_type.rs  spawn_npc_reducer.rs  start_npc_ticker_reducer.rs
deploy/: docker-compose.yml
docs/: TODO.md
docs/adr/: 001-npc-combat-strategy-revision.md  002-npc-behaviour-trees.md  003-npc-behavior-trees.md  004-npc-behavior-trees.md  005-npc-architecture-v2.md  006-hy-world-2-integration-assessment.md
docs/diagrams/: behavior-tree.md  conversation-protocol.md  knowledge-progression.md  llm-usage.md  npc-identity.md  npc-tick.md  system-overview.md
server/bridge/: CLAUDE.md  Cargo.toml
server/bridge/src/: llm.rs  main.rs  prompt.rs  tools.rs
server/module/: CLAUDE.md  spacetime.local.json
server/module/spacetimedb/: CLAUDE.md  Cargo.toml
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/module_bindings/: active_skill_table.rs  active_skill_type.rs  allocate_skill_point_reducer.rs  aoe_zone_table.rs  aoe_zone_type.rs  attack_npc_reducer.rs  behavior_type_type.rs  mod.rs  (+96 more)
(+9 files in other folders)
